Refactoring for proper code fomat and make http and https different ports

--- a/docs/api/1.0.2-SNAPSHOT.md
+++ b/docs/api/1.0.2-SNAPSHOT.md
@@ -2,22 +2,20 @@
 
 ## Source
 
-### http _(Source)_
+### http *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#sources">Source</a>)*
 
 <p style="word-wrap: break-word">The HTTP source receives POST requests via HTTP or HTTPS in format such as <code>text</code>, <code>XML</code> and <code>JSON</code>. If required, you can enable basic authentication to ensure that events are received only from users who are authorized to access the service.</p>
 
-#### Syntax
-
+<span id="syntax" class="md-typeset" style="display: block; font-weight: bold;">Syntax</span>
 ```
 @source(type="http", receiver.url="<STRING>", basic.auth.enabled="<STRING>", worker.count="<STRING>", @map(...)))
 ```
 
-##### Query Parameters
-
+<span id="query-parameters" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">QUERY PARAMETERS</span>
 <table>
     <tr>
         <th>Name</th>
-        <th style="min-width:20em">Description</th>
+        <th style="min-width: 20em">Description</th>
         <th>Default Value</th>
         <th>Possible Data Types</th>
         <th>Optional</th>
@@ -49,12 +47,11 @@
     </tr>
 </table>
 
-#### System Parameters
-
+<span id="system-parameters" class="md-typeset" style="display: block; font-weight: bold;">System Parameters</span>
 <table>
     <tr>
         <th>Name</th>
-        <th style="min-width:20em">Description</th>
+        <th style="min-width: 20em">Description</th>
         <th>Default Value</th>
         <th>Possible Parameters</th>
     </tr>
@@ -67,12 +64,6 @@
     <tr>
         <td style="vertical-align: top">server.bootstrap.socket.timeout</td>
         <td style="vertical-align: top; word-wrap: break-word">property to configure specified timeout in milliseconds which server socket will block for this amount of time for http message content to be received.</td>
-        <td style="vertical-align: top">15</td>
-        <td style="vertical-align: top">Any integer</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">client.bootstrap.socket.timeout</td>
-        <td style="vertical-align: top; word-wrap: break-word">property to configure specified timeout in milliseconds which client socket will block for this amount of time for http message content to be received</td>
         <td style="vertical-align: top">15</td>
         <td style="vertical-align: top">Any integer</td>
     </tr>
@@ -90,14 +81,20 @@
     </tr>
     <tr>
         <td style="vertical-align: top">default.host</td>
-        <td style="vertical-align: top; word-wrap: break-word">The default host.</td>
+        <td style="vertical-align: top; word-wrap: break-word">The default host of the transport.</td>
         <td style="vertical-align: top">0.0.0.0</td>
         <td style="vertical-align: top">Any valid host</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">default.port</td>
-        <td style="vertical-align: top; word-wrap: break-word">The default port.</td>
+        <td style="vertical-align: top">http.port</td>
+        <td style="vertical-align: top; word-wrap: break-word">The default port if the default scheme is 'http'.</td>
         <td style="vertical-align: top">9763</td>
+        <td style="vertical-align: top">Any valid port</td>
+    </tr>
+    <tr>
+        <td style="vertical-align: top">https.port</td>
+        <td style="vertical-align: top; word-wrap: break-word">The default port if the default scheme is 'https'.</td>
+        <td style="vertical-align: top">9443</td>
         <td style="vertical-align: top">Any valid port</td>
     </tr>
     <tr>
@@ -126,11 +123,8 @@
     </tr>
 </table>
 
-
-#### Examples
-
-##### Example 1
-
+<span id="examples" class="md-typeset" style="display: block; font-weight: bold;">Examples</span>
+<span id="example1" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">EXAMPLE1</span>
 ```
 @source(type='http', receiver.url='http://localhost:9055/endpoints/RecPro', @map(type='xml'))
 define stream FooStream (symbol string, price float, volume long);
@@ -140,22 +134,20 @@ define stream FooStream (symbol string, price float, volume long);
 
 ## Sink
 
-### http _(Sink)_
+### http *(<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#sinks">Sink</a>)*
 
 <p style="word-wrap: break-word">This extension publish the HTTP events in any HTTP method  POST, GET, PUT, DELETE  via HTTP or https protocols. As the additional features this component can provide basic authentication as well as user can publish events using custom client truststore files when publishing events via https protocol. And also user can add any number of headers including HTTP_METHOD header for each event dynamically.</p>
 
-#### Syntax
-
+<span id="syntax" class="md-typeset" style="display: block; font-weight: bold;">Syntax</span>
 ```
 @sink(type="http", publisher.url="<STRING>", basic.auth.username="<STRING>", basic.auth.password="<STRING>", client.truststore.path="<STRING>", client.truststore.password="<STRING>", headers="<STRING>", method="<STRING>", @map(...)))
 ```
 
-##### Query Parameters
-
+<span id="query-parameters" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">QUERY PARAMETERS</span>
 <table>
     <tr>
         <th>Name</th>
-        <th style="min-width:20em">Description</th>
+        <th style="min-width: 20em">Description</th>
         <th>Default Value</th>
         <th>Possible Data Types</th>
         <th>Optional</th>
@@ -219,12 +211,11 @@ define stream FooStream (symbol string, price float, volume long);
     </tr>
 </table>
 
-#### System Parameters
-
+<span id="system-parameters" class="md-typeset" style="display: block; font-weight: bold;">System Parameters</span>
 <table>
     <tr>
         <th>Name</th>
-        <th style="min-width:20em">Description</th>
+        <th style="min-width: 20em">Description</th>
         <th>Default Value</th>
         <th>Possible Parameters</th>
     </tr>
@@ -241,12 +232,6 @@ define stream FooStream (symbol string, price float, volume long);
         <td style="vertical-align: top">Any Integer</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">client.bootstrap.socket.timeout</td>
-        <td style="vertical-align: top; word-wrap: break-word">property to configure specified timeout in milliseconds which client socket will block for this amount of time for http message content to be received.</td>
-        <td style="vertical-align: top">15</td>
-        <td style="vertical-align: top">Any Integer</td>
-    </tr>
-    <tr>
         <td style="vertical-align: top">server.bootstrap.boss.group.size</td>
         <td style="vertical-align: top; word-wrap: break-word">Property to configure number of boss threads, which accepts incoming connections until the ports are unbound. Once connection accepts successfully, boss thread passes the accepted channel to one of the worker threads.</td>
         <td style="vertical-align: top">4</td>
@@ -257,18 +242,6 @@ define stream FooStream (symbol string, price float, volume long);
         <td style="vertical-align: top; word-wrap: break-word">Property to configure number of worker threads, which performs non blocking read and write for one or more channels in non-blocking mode.</td>
         <td style="vertical-align: top">8</td>
         <td style="vertical-align: top">Any integer</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">default.host</td>
-        <td style="vertical-align: top; word-wrap: break-word">The default host.</td>
-        <td style="vertical-align: top">0.0.0.0</td>
-        <td style="vertical-align: top">Any Valid host</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">default.port</td>
-        <td style="vertical-align: top; word-wrap: break-word">The default port.</td>
-        <td style="vertical-align: top">9763</td>
-        <td style="vertical-align: top">Integer Port</td>
     </tr>
     <tr>
         <td style="vertical-align: top">default.protocol</td>
@@ -290,11 +263,8 @@ define stream FooStream (symbol string, price float, volume long);
     </tr>
 </table>
 
-
-#### Examples
-
-##### Example 1
-
+<span id="examples" class="md-typeset" style="display: block; font-weight: bold;">Examples</span>
+<span id="example1" class="md-typeset" style="display: block; color: rgba(0, 0, 0, 0.54); font-size: 12.8px; font-weight: bold;">EXAMPLE1</span>
 ```
 @sink(type='http',publisher.url='http://localhost:8009/foo', method='{{method}}',headers='{{headers}}', @map(type='xml' , @payload('{{payloadBody}}')))define stream FooStream (payloadBody String, method string, headers string);
 
