Upgrade siddi verstion M78

--- a/docs/api/1.0.3-SNAPSHOT.md
+++ b/docs/api/1.0.3-SNAPSHOT.md
@@ -57,7 +57,7 @@
     </tr>
     <tr>
         <td style="vertical-align: top">latency.metrics.enabled</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to enable metrics logs to monitor transport latency for netty.</td>
+        <td style="vertical-align: top; word-wrap: break-word">Property to enable metrics logs to monitor transport latency for config.</td>
         <td style="vertical-align: top">true</td>
         <td style="vertical-align: top">true<br>false</td>
     </tr>
@@ -221,7 +221,7 @@ define stream FooStream (symbol string, price float, volume long);
     </tr>
     <tr>
         <td style="vertical-align: top">latency.metrics.enabled</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to enable metrics logs to monitor transport latency for netty.</td>
+        <td style="vertical-align: top; word-wrap: break-word">Property to enable metrics logs to monitor transport latency for config.</td>
         <td style="vertical-align: top">true</td>
         <td style="vertical-align: top">Any Integer</td>
     </tr>
