--- a/docs/api/1.0.5-SNAPSHOT.md
+++ b/docs/api/1.0.5-SNAPSHOT.md
@@ -1,4 +1,4 @@
-# API Docs - v1.0.7
+# API Docs - v1.0.5-SNAPSHOT
 
 ## Sink
 
@@ -88,43 +88,25 @@
         <th>Possible Parameters</th>
     </tr>
     <tr>
-        <td style="vertical-align: top">latency.metrics.enabled</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to enable metrics logs to monitor transport latency for config.</td>
-        <td style="vertical-align: top">true</td>
-        <td style="vertical-align: top">Any Integer</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">server.bootstrap.socket.timeout</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to configure specified timeout in milliseconds which server socket will block for this amount of time for http message content to be received.</td>
-        <td style="vertical-align: top">15</td>
-        <td style="vertical-align: top">Any Integer</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">server.bootstrap.boss.group.size</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to configure number of boss threads, which accepts incoming connections until the ports are unbound. Once connection accepts successfully, boss thread passes the accepted channel to one of the worker threads.</td>
+        <td style="vertical-align: top">serverBootstrapBossGroupSize</td>
+        <td style="vertical-align: top; word-wrap: break-word">property to configure number of boss threads, which accepts incoming connections until the ports are unbound. Once connection accepts successfully, boss thread passes the accepted channel to one of the worker threads.</td>
         <td style="vertical-align: top">4</td>
         <td style="vertical-align: top">Any integer</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">server.bootstrap.worker.group.size</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to configure number of worker threads, which performs non blocking read and write for one or more channels in non-blocking mode.</td>
+        <td style="vertical-align: top">serverBootstrapWorkerGroupSize</td>
+        <td style="vertical-align: top; word-wrap: break-word">property to configure number of worker threads, which performs non blocking read and write for one or more channels in non-blocking mode.</td>
         <td style="vertical-align: top">8</td>
         <td style="vertical-align: top">Any integer</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">default.protocol</td>
-        <td style="vertical-align: top; word-wrap: break-word">The default protocol.</td>
-        <td style="vertical-align: top">http</td>
-        <td style="vertical-align: top">http<br>https</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">https.truststore.file</td>
+        <td style="vertical-align: top">trustStoreLocation</td>
         <td style="vertical-align: top; word-wrap: break-word">The default truststore file path.</td>
         <td style="vertical-align: top">${carbon.home}/resources/security/client-truststore.jks</td>
         <td style="vertical-align: top">Path to client-truststore.jks</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">https.truststore.password</td>
+        <td style="vertical-align: top">trustStorePassword</td>
         <td style="vertical-align: top; word-wrap: break-word">The default truststore password.</td>
         <td style="vertical-align: top">wso2carbon</td>
         <td style="vertical-align: top">Truststore password</td>
@@ -195,67 +177,55 @@
         <th>Possible Parameters</th>
     </tr>
     <tr>
-        <td style="vertical-align: top">latency.metrics.enabled</td>
-        <td style="vertical-align: top; word-wrap: break-word">Property to enable metrics logs to monitor transport latency for config.</td>
-        <td style="vertical-align: top">true</td>
-        <td style="vertical-align: top">true<br>false</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">server.bootstrap.socket.timeout</td>
-        <td style="vertical-align: top; word-wrap: break-word">property to configure specified timeout in milliseconds which server socket will block for this amount of time for http message content to be received.</td>
-        <td style="vertical-align: top">15</td>
-        <td style="vertical-align: top">Any integer</td>
-    </tr>
-    <tr>
-        <td style="vertical-align: top">server.bootstrap.boss.group.size</td>
+        <td style="vertical-align: top">serverBootstrapBossGroupSize</td>
         <td style="vertical-align: top; word-wrap: break-word">property to configure number of boss threads, which accepts incoming connections until the ports are unbound. Once connection accepts successfully, boss thread passes the accepted channel to one of the worker threads.</td>
         <td style="vertical-align: top">4</td>
         <td style="vertical-align: top">Any integer</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">server.bootstrap.worker.group.size</td>
+        <td style="vertical-align: top">serverBootstrapWorkerGroupSize</td>
         <td style="vertical-align: top; word-wrap: break-word">property to configure number of worker threads, which performs non blocking read and write for one or more channels in non-blocking mode.</td>
         <td style="vertical-align: top">8</td>
         <td style="vertical-align: top">Any integer</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">default.host</td>
+        <td style="vertical-align: top">defaultHost</td>
         <td style="vertical-align: top; word-wrap: break-word">The default host of the transport.</td>
         <td style="vertical-align: top">0.0.0.0</td>
         <td style="vertical-align: top">Any valid host</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">http.port</td>
+        <td style="vertical-align: top">defaultHttpPort</td>
         <td style="vertical-align: top; word-wrap: break-word">The default port if the default scheme is 'http'.</td>
-        <td style="vertical-align: top">9763</td>
+        <td style="vertical-align: top">8280</td>
         <td style="vertical-align: top">Any valid port</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">https.port</td>
+        <td style="vertical-align: top">defaultHttpsPort</td>
         <td style="vertical-align: top; word-wrap: break-word">The default port if the default scheme is 'https'.</td>
-        <td style="vertical-align: top">9443</td>
+        <td style="vertical-align: top">8243</td>
         <td style="vertical-align: top">Any valid port</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">default.protocol</td>
+        <td style="vertical-align: top">defaultListenerScheme</td>
         <td style="vertical-align: top; word-wrap: break-word">The default protocol.</td>
         <td style="vertical-align: top">http</td>
         <td style="vertical-align: top">http<br>https</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">https.keystore.file</td>
+        <td style="vertical-align: top">keyStoreLocation</td>
         <td style="vertical-align: top; word-wrap: break-word">The default keystore file path.</td>
         <td style="vertical-align: top">${carbon.home}/resources/security/wso2carbon.jks</td>
         <td style="vertical-align: top">Path to wso2carbon.jks file</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">https.keystore.password</td>
+        <td style="vertical-align: top">keyStorePassword</td>
         <td style="vertical-align: top; word-wrap: break-word">The default keystore password.</td>
         <td style="vertical-align: top">wso2carbon</td>
         <td style="vertical-align: top">String of keystore password</td>
     </tr>
     <tr>
-        <td style="vertical-align: top">https.cert.password</td>
+        <td style="vertical-align: top">certPassword</td>
         <td style="vertical-align: top; word-wrap: break-word">The default cert password.</td>
         <td style="vertical-align: top">wso2carbon</td>
         <td style="vertical-align: top">String of cert password</td>
@@ -269,5 +239,5 @@
 define stream FooStream (symbol string, price float, volume long);
 
 ```
-<p style="word-wrap: break-word">Above source configuration performs a default XML input mapping. The expected input is as follows:&lt;events&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&lt;event&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;symbol&gt;WSO2&lt;/symbol&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;price&gt;55.6&lt;/price&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;volume&gt;100&lt;/volume&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&lt;/event&gt;<br>&lt;/events&gt;<br>If basic authentication is enabled via the <code>basic.auth.enabled='true</code> setting, each input event is also expected to contain the <code>Authorization:'Basic encodeBase64(username:Password)'</code> header.</p>
+<p style="word-wrap: break-word">Above source listenerConfiguration performs a default XML input mapping. The expected input is as follows:&lt;events&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&lt;event&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;symbol&gt;WSO2&lt;/symbol&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;price&gt;55.6&lt;/price&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;volume&gt;100&lt;/volume&gt;<br>&nbsp;&nbsp;&nbsp;&nbsp;&lt;/event&gt;<br>&lt;/events&gt;<br>If basic authentication is enabled via the <code>basic.auth.enabled='true</code> setting, each input event is also expected to contain the <code>Authorization:'Basic encodeBase64(username:Password)'</code> header.</p>
 
