--- a/docs/api/1.0.4.md
+++ b/docs/api/1.0.4.md
@@ -2,7 +2,7 @@
 
 ## Source
 
-### http *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#source">(Source)</a>*
+### http *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#source">(Source)</a>*
 
 <p style="word-wrap: break-word">The HTTP source receives POST requests via HTTP or HTTPS in format such as <code>text</code>, <code>XML</code> and <code>JSON</code>. If required, you can enable basic authentication to ensure that events are received only from users who are authorized to access the service.</p>
 
@@ -134,7 +134,7 @@ define stream FooStream (symbol string, price float, volume long);
 
 ## Sink
 
-### http *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#sink">(Sink)</a>*
+### http *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#sink">(Sink)</a>*
 
 <p style="word-wrap: break-word">This extension publish the HTTP events in any HTTP method  POST, GET, PUT, DELETE  via HTTP or https protocols. As the additional features this component can provide basic authentication as well as user can publish events using custom client truststore files when publishing events via https protocol. And also user can add any number of headers including HTTP_METHOD header for each event dynamically.</p>
 
